--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>Github<title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hello!</h1>
+  <footer> 2019</footer>
 </body>
 </html>
